--- a/Proyecto BD/scss/layout/_principal.scss
+++ b/Proyecto BD/scss/layout/_principal.scss
@@ -22,3 +22,18 @@
         }
     }
 }
+
+.login {
+    margin-top: 10%;
+    h1 {
+        font-weight: $bold;
+    }
+    form {
+        input[type="submit"] {
+            border-radius: 1rem;
+            &:hover {
+                transform: scale(0.985);
+            }
+        }
+    }
+}
