--- a/ProyectoBD/scss/base/_alertas.scss
+++ b/ProyectoBD/scss/base/_alertas.scss
@@ -3,7 +3,7 @@
 }
 
 .alert {
-    font-size: 1..2rem;
+    font-size: 1.2rem;
     font-weight: $bold;
     padding: 1rem;
     margin-bottom: 1rem;
