--- a/ProyectoBD/scss/base/_variables.scss
+++ b/ProyectoBD/scss/base/_variables.scss
@@ -9,11 +9,13 @@ $desktop: 1024px;
 // Colores
 $negro: #000000;
 $azulClaro: #09b5e0d5;
+$azulClaroTransparente: #09b5e086;
 $verde: #71B100;
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
-$rojo: #bd0707;
+$rojo: #ff2222;
+$amarillo: #dfcf3f;
 $separacion: 5rem;
 // Fuentes
 $delgada: 300;
